@@ -8,7 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.OffsetDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Component
@@ -20,6 +19,6 @@ public class PriceH2Repository implements PriceRepository {
     public List<Price> findPrices(OffsetDateTime date, Integer productId, Integer brandId) {
         return priceH2CustomRepository.findPrices(date, productId, brandId).stream()
                 .map(priceH2 -> modelMapper.map(priceH2, Price.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
